# stm32.rs

./: .travis.yml  Cargo.toml  README.md  cp_linker_scripts.rs  thumbv7em-none-eabi.json
.travis/: build.sh
examples/stm32f072-discovery/: Cargo.toml  build.sh  thumbv6-none-eabi.json
examples/stm32f072-discovery/.cargo/: config
examples/stm32f072-discovery/src/: main.rs
examples/stm32f4-discovery/: Cargo.toml  flash.cfg  thumbv7em-none-eabi.json
examples/stm32f4-discovery/src/: main.rs
examples/stm32f429-discovery/: Cargo.toml  build.sh  thumbv7em-none-eabi.json
examples/stm32f429-discovery/src/: main.rs
examples/stm32l4-discovery/: Cargo.toml
examples/stm32l4-discovery/src/: main.rs
ld/: sections.ld  stm32f072rb.ld  stm32f0x1_peripherals.ld  stm32f407vg.ld  stm32f429ZI.ld  stm32f4_peripherals.ld  stm32l4x6.ld  stm32l4x6_peripherals.ld
src/: init.rs  lib.rs  main.rs  rng.rs  rtc.rs  timer.rs  vectors.rs
src/crc/: mod.rs
src/flash/: mod.rs
src/gpio/: mod.rs
src/stm32f0/: mod.rs
src/stm32f0x1/: mod.rs  rcc.rs
src/stm32f0x2/: rcc.rs
src/stm32f4/: mod.rs  rcc.rs  timer_opt.rs
src/stm32l4/: flash.rs  mod.rs  rcc.rs
src/stm32l476/: mod.rs
src/stm32l4x6/: firewall.rs  mod.rs  pwr.rs  timer_opt.rs
src/timer/: mod.rs
src/usart/: mod.rs
