[package]
name = "stm32"
version = "0.1.0"
authors = ["James Cook <mokus@deepbondi.net>"]
build = "cp_linker_scripts.rs"

[dependencies.core]
git = "https://github.com/hackndev/rust-libcore.git"

[dependencies.ioreg]
path = "../../hackndev/zinc/ioreg"

[dependencies.volatile_cell]
path = "../../hackndev/zinc/volatile_cell"
