[package]
name = "stm32f072-discovery"
version = "0.1.0"
authors = ["James Cook <mokus@deepbondi.net>"]

[dependencies.core]
git = "https://github.com/hackndev/rust-libcore.git"

[dependencies.rlibc]
git = "https://github.com/hackndev/rlibc"
branch = "zinc"

[dependencies.stm32]
path = "../.."

[dependencies.arm_rt_macro]
git = "https://github.com/mokus0/arm_embedded_rt"
path = "arm_rt_macro"
